<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="350dp"
    android:layout_height="400dp"
    android:minWidth="300dp"
    android:minHeight="300dp">

    <TextView
        android:id="@+id/gridSizeLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/grid_size"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/sleepLengthLabel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <SeekBar
        android:id="@+id/gridSizeSeek"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:max="50"
        app:layout_constraintBottom_toBottomOf="@+id/gridSizeLabel"
        app:layout_constraintEnd_toStartOf="@+id/gridSizeSelectedLabel"
        app:layout_constraintStart_toEndOf="@id/gridSizeLabel"
        app:layout_constraintTop_toTopOf="@+id/gridSizeLabel" />

    <TextView
        android:id="@+id/gridSizeSelectedLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/gridSizeLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/gridSizeLabel"
        tools:text="16" />


    <TextView
        android:id="@+id/sleepLengthLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/sleep_milli"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@id/numTileTypeLabel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gridSizeLabel" />

    <SeekBar
        android:id="@+id/sleepLengthSeek"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:max="50"
        app:layout_constraintBottom_toBottomOf="@+id/sleepLengthLabel"
        app:layout_constraintEnd_toStartOf="@+id/sleepLengthSelectedLabel"
        app:layout_constraintStart_toEndOf="@id/sleepLengthLabel"
        app:layout_constraintTop_toTopOf="@+id/sleepLengthLabel" />

    <TextView
        android:id="@+id/sleepLengthSelectedLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/sleepLengthLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/sleepLengthLabel"
        tools:text="16" />

    <TextView
        android:id="@+id/numTileTypeLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/tile_types"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@id/numMatchLabel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sleepLengthLabel" />

    <SeekBar
        android:id="@+id/numTileTypeSeek"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:max="6"
        app:layout_constraintBottom_toBottomOf="@+id/numTileTypeLabel"
        app:layout_constraintEnd_toStartOf="@+id/numTileTypeSelectedLabel"
        app:layout_constraintStart_toEndOf="@id/numTileTypeLabel"
        app:layout_constraintTop_toTopOf="@+id/numTileTypeLabel" />

    <TextView
        android:id="@+id/numTileTypeSelectedLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/numTileTypeLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/numTileTypeLabel"
        tools:text="3" />

    <TextView
        android:id="@+id/numMatchLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/num_match"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/sleepXTickLabel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/numTileTypeLabel" />

    <SeekBar
        android:id="@+id/numMatchSeek"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:max="6"
        app:layout_constraintBottom_toBottomOf="@+id/numMatchLabel"
        app:layout_constraintEnd_toStartOf="@+id/numMatchSelectedLabel"
        app:layout_constraintStart_toEndOf="@id/numMatchLabel"
        app:layout_constraintTop_toTopOf="@+id/numMatchLabel" />

    <TextView
        android:id="@+id/numMatchSelectedLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/numMatchLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/numMatchLabel"
        tools:text="3" />

    <TextView
        android:id="@+id/sleepXTickLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/skip_frame"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/numMatchLabel" />

    <SeekBar
        android:id="@+id/sleepXTickSeek"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:max="100"
        app:layout_constraintBottom_toBottomOf="@+id/sleepXTickLabel"
        app:layout_constraintEnd_toStartOf="@+id/sleepXTickSelectedLabel"
        app:layout_constraintStart_toEndOf="@id/sleepXTickLabel"
        app:layout_constraintTop_toTopOf="@+id/sleepXTickLabel" />

    <TextView
        android:id="@+id/sleepXTickSelectedLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/sleepXTickLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/sleepXTickLabel"
        tools:text="1" />

</androidx.constraintlayout.widget.ConstraintLayout>
